ecmascript/parser/tests/test262-error-references/fail/b94278c0e4bdb364.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/b94278c0e4bdb364.js:1:5
  |
1 | _﻿_
  |     ^

